Criando estrutura de pagina de índice

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </p>
             <br clear="all" />
             <div>
-                <a name="page" >Pr&oacute;xima P&aacute;gina</a>
+                <a href="page/indice.html">Pr&oacute;xima P&aacute;gina</a>
             </div>
         </div>
         <div id="footer">
