--- a/index.html
+++ b/index.html
@@ -11,38 +11,19 @@
             <h1>
                 <a name="select">&nbsp;</a>Hypertext Transfer Protocol -- HTTP/1.1
             </h1>
-            <h3>Status of this Memo</h3>
             <p>
-               This document specifies an Internet standards track protocol for the
-               Internet community, and requests discussion and suggestions for
-               improvements.  Please refer to the current edition of the "Internet
-               Official Protocol Standards" (STD 1) for the standardization state
-               and status of this protocol.  Distribution of this memo is unlimited.
+                PROJETO DE TRADU&Ccedil;&Atilde;O LIVRE E N&Atilde;O OFICIAL DO DOCUMENTO <i>"Hypertext Transfer Protocol -- HTTP/1.1 - Draft Standard RFC 2616"</i>
             </p>
-            <h3>Copyright Notice</h3>
+            <a href="en/indice.html">
+                <img src="images/en.png" alt="Version in English" title="Version in English" />
+            </a>
+            <a href="pt-br/indice.html">
+                <img src="images/pt-br.png" alt="Vers&atilde;o em Portugu&ecirc;s" title="Vers&atilde;o em Portugu&ecirc;s" />
+            </a>
             <p>
-               Copyright (C) The Internet Society (1999).  All Rights Reserved.
-            </p>
-            <h3>Abstract</h3>
-            <p>
-                The Hypertext Transfer Protocol (HTTP) is an application-level
-               protocol for distributed, collaborative, hypermedia information
-               systems. It is a generic, stateless, protocol which can be used for
-               many tasks beyond its use for hypertext, such as name servers and
-               distributed object management systems, through extension of its
-               request methods, error codes and headers [47]. A feature of HTTP is
-               the typing and negotiation of data representation, allowing systems
-               to be built independently of the data being transferred.
-            </p>
-            <p>
-               HTTP has been in use by the World-Wide Web global information
-               initiative since 1990. This specification defines the protocol
-               referred to as "HTTP/1.1", and is an update to RFC 2068 [33].
-            </p>
-            <br clear="all" />
-            <div>
-                <a href="page/indice.html">Pr&oacute;xima P&aacute;gina</a>
-            </div>
+                COLABORADOR(ES):<br/>
+                ANDRÉ VITOR B. C. DE MIRANDA<br/>
+            </p>            
         </div>
         <div id="footer">
             <p><a href="#top">Topo da P&aacute;gina</a></p>
