--- a/util/template.html
+++ b/util/template.html
@@ -3,8 +3,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Hypertext Transfer Protocol -- HTTP/1.1</title>
-    <style type='text/css' media='all'>@import url('estilo.css');</style>
-    <link rel='stylesheet' type='text/css' media='all' href='estilo.css' />
+    <style type='text/css' media='all'>@import url('../estilo.css');</style>
+    <link rel='stylesheet' type='text/css' media='all' href='../estilo.css' />
 </head>
 <body>
     <br clear="all" />
