Iniciando Trazução do Proposito

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <p>
                 PROJETO DE TRADU&Ccedil;&Atilde;O LIVRE E N&Atilde;O OFICIAL DO DOCUMENTO <i>"Hypertext Transfer Protocol -- HTTP/1.1 - Draft Standard RFC 2616"</i>
             </p>
-            <a href="en/indice.html">
+            <a href="en/index">
                 <img src="images/en.png" alt="Version in English" title="Version in English" />
             </a>
-            <a href="pt-br/indice.html">
+            <a href="pt-br/index">
                 <img src="images/pt-br.png" alt="Vers&atilde;o em Portugu&ecirc;s" title="Vers&atilde;o em Portugu&ecirc;s" />
             </a>
             <p>
