Mudando o jeito de fazer a coisa.

--- a/antigo/pt-br/indice.html
+++ b/antigo/pt-br/indice.html
@@ -3,17 +3,17 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title></title>
-        <link rel='stylesheet' type='text/css' media='all' href='../estilo.css' />
+        <link rel='stylesheet' type='text/css' media='all' href='/estilo.css' />
     </head>
     <body>
         <div id="content">
-            <h1><a name="select">&nbsp;</a>Table of Contents</h1>
+            <h1><a name="select">&nbsp;</a>Índice</h1>
             <div>
                 <div class="wrapper">
                     <ol>
                         <li>
                             <ul>
-                                <li>1&nbsp;Introduction</li>
+                                <li><a href="proposito#introducao">1&nbsp;Introdução</a></li>
                                 <li>1.1&nbsp;Purpose</li>
                                 <li>1.2&nbsp;Requirements</li>
                                 <li>1.3&nbsp;Terminology</li>
@@ -269,9 +269,9 @@
             </div>
         </div>
         <div id="footer">
-            <p><a href="#top">Topo da P&aacute;gina</a></p>
-            <p>PROJETO DE TRADU&Ccedil;&Atilde;O LIVRE</p>
-            <p>PROJETO SOBRE LICEN&Ccedil;A <a href="http://www.gnu.org/licenses/gpl-3.0.txt">GPL v3.0</a> - 2012</p>
+            <p><a href="#top">Topo da Página</a></p>
+            <p>PROJETO DE TRADUÇÃO LIVRE</p>
+            <p>PROJETO SOBRE LICENÇA <a href="http://www.gnu.org/licenses/gpl-3.0.txt">GPL v3.0</a> - 2012</p>
         </div>
     </body>
 </html>
