--- a/antigo/pt-br/proposito.html
+++ b/antigo/pt-br/proposito.html
@@ -3,8 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title> Hypertext Transfer Protocol -- HTTP/1.1 - Draft Standard RFC 2616</title>
-        <link rel='stylesheet' type='text/css' media='all' href='estilo.css' />
-        <script language="javascript" src="page.js" charset="charset=utf-8" type="text/javascript"></script>
+        <link rel='stylesheet' type='text/css' media='all' href='/estilo.css' />
     </head>
     <body>
         <div id="content">
