--- a/index.html
+++ b/index.html
@@ -1,34 +1,123 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="pt-br" lang="pt-br">
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title> Hypertext Transfer Protocol -- HTTP/1.1 - Draft Standard RFC 2616</title>
-        <link rel='stylesheet' type='text/css' media='all' href='estilo.css' />
-        <script language="javascript" src="page.js" charset="charset=utf-8" type="text/javascript"></script>
-    </head>
-    <body>
-        <div id="content">
-            <h1>
-                <a name="select">&nbsp;</a>Hypertext Transfer Protocol -- HTTP/1.1
-            </h1>
-            <p>
-                PROJETO DE TRADU&Ccedil;&Atilde;O LIVRE E N&Atilde;O OFICIAL DO DOCUMENTO <i>"Hypertext Transfer Protocol -- HTTP/1.1 - Draft Standard RFC 2616"</i>
-            </p>
-            <a href="en/index">
-                <img src="images/en.png" alt="Version in English" title="Version in English" />
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Hypertext Transfer Protocol -- HTTP/1.1 - Draft Standard RFC 2616</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="PROJETO DE TRADUÇÃO LIVRE E NÃO OFICIAL DO DOCUMENTO.">
+    <meta name="author" content="Andre Vitor Barbosa Cuba de Miranda">
+
+    <!-- CSS -->
+    <link href="/assets/css/bootstrap.min.css" rel="stylesheet"/>
+    <style type="text/css">
+
+      /* Sticky footer styles
+      -------------------------------------------------- */
+
+      html,
+      body {
+        height: 100%;
+        /* The html and body elements cannot have any padding or margin. */
+      }
+
+      /* Wrapper for page content to push down footer */
+      #wrap {
+        min-height: 100%;
+        height: auto !important;
+        height: 100%;
+        /* Negative indent footer by it's height */
+        margin: 0 auto -60px;
+      }
+
+      /* Set the fixed height of the footer here */
+      #push,
+      #footer {
+        height: 60px;
+      }
+      #footer {
+        background-color: #f5f5f5;
+      }
+
+      /* Lastly, apply responsive CSS fixes as necessary */
+      @media (max-width: 767px) {
+        #footer {
+          margin-left: -20px;
+          margin-right: -20px;
+          padding-left: 20px;
+          padding-right: 20px;
+        }
+      }
+
+
+
+      /* Custom page CSS
+      -------------------------------------------------- */
+      /* Not required for template or sticky footer method. */
+
+      .container {
+        width: auto;
+        max-width: 680px;
+      }
+      .container .credit {
+        margin: 20px 0;
+      }
+      .container{
+          font-size: 12px;
+      }
+
+    </style>
+    <link href="/assets/css/bootstrap-responsive.min.css" rel="stylesheet"/>
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="/assets/js/html5shiv.js"></script>
+    <![endif]-->
+
+    <!-- Fav and touch icons -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/ico/apple-touch-icon-144-precomposed.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/ico/apple-touch-icon-114-precomposed.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/ico/apple-touch-icon-72-precomposed.png"/>
+    <link rel="apple-touch-icon-precomposed" href="/assets/ico/apple-touch-icon-57-precomposed.png"/>
+    <link rel="shortcut icon" href="/assets/ico/favicon.png"/>
+  </head>
+  <body>
+    <!-- Part 1: Wrap all page content here -->
+    <div id="wrap">
+      <!-- Begin page content -->
+        <div class="container">
+            <div class="masthead">
+            <h5>Hypertext Transfer Protocol -- HTTP/1.1 - Draft Standard RFC 2616</h5>
+            <div class="navbar">
+              <div class="navbar-inner">
+                <div class="container">
+                  <ul class="nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="/doc/rfc2616.txt">RFC 2616</a></li>
+                    <li><a href="#">Autores</a></li>
+                    <li><a href="#">Colaboradores</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div><!-- /.navbar -->
+          </div>
+            <div id="content">
+            <a href="en/?page=indice">
+                <img src="/assets/img/en.png" alt="Version in English" title="Version in English" />
             </a>
-            <a href="pt-br/index">
-                <img src="images/pt-br.png" alt="Vers&atilde;o em Portugu&ecirc;s" title="Vers&atilde;o em Portugu&ecirc;s" />
+            <a href="pt-br/?page=indice">
+                <img src="/assets/img/pt-br.png" alt="Vers&atilde;o em Portugu&ecirc;s" title="Vers&atilde;o em Portugu&ecirc;s" />
             </a>
-            <p>
-                COLABORADOR(ES):<br/>
-                ANDRÉ VITOR B. C. DE MIRANDA<br/>
-            </p>            
+            </div>
+            <div id="push"></div>
         </div>
-        <div id="footer">
-            <p><a href="#top">Topo da P&aacute;gina</a></p>
-            <p>PROJETO DE TRADU&Ccedil;&Atilde;O LIVRE</p>
-            <p>PROJETO SOBRE LICEN&Ccedil;A <a href="http://www.gnu.org/licenses/gpl-3.0.txt">GPL v3.0</a> - 2012</p>
-        </div>
-    </body>
+    </div>
+    <div id="footer">
+      <div class="container">
+          <p class="muted credit">
+              PROJETO DE TRADUÇÃO LIVRE E NÃO OFICIAL DO DOCUMENTO.
+              <span class="pull-right">PROJETO SOBRE LICENÇA <a href="http://www.gnu.org/licenses/gpl-3.0.txt">GPL v3.0</a> - 2012 - 2013</span>
+          </p>
+      </div>
+    </div>
+  </body>
 </html>
