--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ $ git checkout gh-pages
           </script>
           <script type="text/javascript">
             try {
-              var pageTracker = _gat._getTracker("x");
+              var pageTracker = _gat._getTracker("UA-48988616-1");
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
