--- a/public_html/en/content/notational.html
+++ b/public_html/en/content/notational.html
@@ -1,82 +1,206 @@
-<h1>1 Titulo</h1>
-<h2 id="sec0">1.1 Subtitulo</h2>
+<h1>2 Notational Conventions and Generic Grammar</h1>
+<h2 id="sec0">2.1 Augmented BNF</h2>
 <hr class="col-md-12">
 <p>
-    Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis.
-    Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis.
-    Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é
-    amistosis quis leo. Manduma pindureta quium dia nois paga.
-    Sapien in monti palavris qui num significa nadis i pareci latim.
-    Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.
+   All of the mechanisms specified in this document are described in
+   both prose and an augmented Backus-Naur Form (BNF) similar to that
+   used by RFC 822 [9]. Implementors will need to be familiar with the
+   notation in order to understand this specification. The augmented BNF
+   includes the following constructs:
+</p>
+<dl class="dl-horizontal">
+  <dt>name = definition</dt>
+  <dd>The name of a rule is simply the name itself (without any
+      enclosing "<" and ">") and is separated from its definition by the
+      equal "=" character. White space is only significant in that
+      indentation of continuation lines is used to indicate a rule
+      definition that spans more than one line. Certain basic rules are
+      in uppercase, such as SP, LWS, HT, CRLF, DIGIT, ALPHA, etc. Angle
+      brackets are used within definitions whenever their presence will
+      facilitate discerning the use of rule names.
+  </dd>
+  <dt>literal</dt>
+  <dd>Quotation marks surround literal text. Unless stated otherwise,
+      the text is case-insensitive.
+  </dd>
+  <dt>rule1 | rule2</dt>
+  <dd>Elements separated by a bar ("|") are alternatives, e.g., "yes |
+      no" will accept yes or no.
+  </dd>
+  <dt>(rule1 rule2)</dt>
+  <dd>Elements enclosed in parentheses are treated as a single element.
+      Thus, "(elem (foo | bar) elem)" allows the token sequences "elem
+      foo elem" and "elem bar elem".
+  </dd>
+  <dt>*rule</dt>
+  <dd>The character "*" preceding an element indicates repetition. The
+      full form is "&lt;n&gt;*&lt;m&gt;element" indicating at least &lt;n&gt; and at most
+      &lt;m&gt; occurrences of element. Default values are 0 and infinity so
+      that "*(element)" allows any number, including zero; "1*element"
+      requires at least one; and "1*2element" allows one or two.
+  </dd>
+  <dt>[rule]</dt>
+  <dd>Square brackets enclose optional elements; "[foo bar]" is
+      equivalent to "*1(foo bar)".
+  </dd>
+  <dt> N rule</dt>
+  <dd>Specific repetition: "&lt;n&gt;(element)" is equivalent to
+      "&lt;n&gt;*&lt;n&gt;(element)"; that is, exactly &lt;n&gt; occurrences of (element).
+      Thus 2DIGIT is a 2-digit number, and 3ALPHA is a string of three
+      alphabetic characters.
+  </dd>
+  <dt>#rule</dt>
+  <dd>
+      A construct "#" is defined, similar to "*", for defining lists of
+      elements. The full form is &lt;n&gt;*&lt;m&gt;element" indicating at least
+      &lt;n&gt; and at most &lt;m&gt; elements, each separated by one or more commas
+      (",") and OPTIONAL linear white space (LWS). This makes the usual
+      form of lists very easy; a rule such as
+         ( *LWS element *( *LWS "," *LWS element ))
+      can be shown as
+         1#element
+      Wherever this construct is used, null elements are allowed, but do
+      not contribute to the count of elements present. That is,
+      "(element), , (element) " is permitted, but counts as only two
+      elements. Therefore, where at least one element is required, at
+      least one non-null element MUST be present. Default values are 0
+      and infinity so that "#element" allows any number, including zero;
+      "1#element" requires at least one; and "1#2element" allows one or
+      two.
+  </dd>
+  <dt>; comment</dt>
+  <dd>A semi-colon, set off some distance to the right of rule text,
+      starts a comment that continues to the end of line. This is a
+      simple way of including useful notes in parallel with the
+      specifications.
+  </dd>
+  <dt>implied *LWS</dt>
+  <dd>The grammar described by this specification is word-based. Except
+      where noted otherwise, linear white space (LWS) can be included
+      between any two adjacent words (token or quoted-string), and
+      between adjacent words and separators, without changing the
+      interpretation of a field. At least one delimiter (LWS and/or
+      separators) MUST exist between any two tokens (for the definition
+      of "token" below), since they would otherwise be interpreted as a
+      single token.
+  </dd>
+</dl>
+<h2 id="sec1">2.2 Basic Rules</h2>
+<p>
+   The following rules are used throughout this specification to
+   describe basic parsing constructs. The US-ASCII coded character set
+   is defined by ANSI X3.4-1986 [21].
+</p>
+<dl class="dl-horizontal">
+  <dt>OCTET</dt>
+  <dd>= &lt;any 8-bit sequence of data&gt;</dd>
+  <dt>CHAR</dt>
+  <dd>= &lt;any US-ASCII character (octets 0 - 127)></dd>
+  <dt>UPALPHA</dt>
+  <dd>= &lt;any US-ASCII uppercase letter "A".."Z"&gt;</dd>
+  <dt>LOALPHA</dt>
+  <dd>= &lt;any US-ASCII lowercase letter "a".."z"&gt;</dd>
+  <dt>ALPHA</dt>
+  <dd>= UPALPHA | LOALPHA</dd>
+  <dt>DIGIT</dt>
+  <dd>= &lt;any US-ASCII digit "0".."9"&gt;</dd>
+  <dt>CTL</dt>
+  <dd>= &lt;any US-ASCII control character (octets 0 - 31) and DEL (127)&gt;</dd>
+  <dt>CR</dt>
+  <dd>= &lt;US-ASCII CR, carriage return (13)&gt;</dd>
+  <dt>LF</dt>
+  <dd>= &lt;US-ASCII LF, linefeed (10)&gt;</dd>
+  <dt>SP</dt>
+  <dd>= &lt;US-ASCII SP, space (32)&gt;</dd>
+  <dt>HT</dt>
+  <dd>= &lt;US-ASCII HT, horizontal-tab (9)&gt;</dd>
+  <dt>&lt;"&gt;</dt>
+  <dd>= &lt;US-ASCII double-quote mark (34)&gt;</dd>
+</dl>
+
+<p>HTTP/1.1 defines the sequence CR LF as the end-of-line marker for all
+   protocol elements except the entity-body (see appendix 19.3 for
+   tolerant applications). The end-of-line marker within an entity-body
+   is defined by its associated media type, as described in section 3.7.
+</p>
+<dl class="dl-horizontal">
+  <dt>CRLF </dt>
+  <dd>= CR LF</dd>
+</dl>
+<p>HTTP/1.1 header field values can be folded onto multiple lines if the
+   continuation line begins with a space or horizontal tab. All linear
+   white space, including folding, has the same semantics as SP. A
+   recipient MAY replace any linear white space with a single SP before
+   interpreting the field value or forwarding the message downstream.
+</p>
+<dl class="dl-horizontal">
+  <dt>LWS</dt>
+  <dd>= [CRLF] 1*( SP | HT )</dd>
+</dl>
+<p>
+   The TEXT rule is only used for descriptive field contents and values
+   that are not intended to be interpreted by the message parser. Words
+   of *TEXT MAY contain characters from character sets other than ISO-
+   8859-1 [22] only when encoded according to the rules of RFC 2047
+   [14].
+</p>
+<dl class="dl-horizontal">
+  <dt>TEXT </dt>
+  <dd>= &lt;any OCTET except CTLs,but including LWS&gt;</dd>
+</dl>
+<p>
+   A CRLF is allowed in the definition of TEXT only as part of a header
+   field continuation. It is expected that the folding LWS will be
+   replaced with a single SP before interpretation of the TEXT value.
 </p>
 <p>
-   Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e 
-   fermentis. Interagi no mé, cursus quis, vehicula ac nisi. Aenean vel dui dui.
-   Nullam leo erat, aliquet quis tempus a, posuere ut mi. Ut scelerisque neque
-   et turpis posuere pulvinar pellentesque nibh ullamcorper.
-   Pharetra in mattis molestie, volutpat elementum justo. Aenean ut ante turpis.
-   Pellentesque laoreet mé vel lectus scelerisque interdum cursus velit auctor.
-   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac mauris
-   lectus, non scelerisque augue. Aenean justo massa.
+    Hexadecimal numeric characters are used in several protocol elements.
 </p>
+<dl class="dl-horizontal">
+  <dt>HEX</dt>
+  <dd>= "A" | "B" | "C" | "D" | "E" | "F" | "a" | "b" | "c" | "d" | "e" | "f" | DIGIT</dd>
+</dl>
 <p>
-    Casamentiss faiz malandris se pirulitá, Nam liber tempor cum soluta nobis
-    eleifend option congue nihil imperdiet doming id quod mazim placerat facer
-    possim assum. Lorem ipsum dolor sit amet, consectetuer Ispecialista im mé
-    intende tudis nuam golada, vinho, uiski, carirí, rum da jamaikis, só num
-    pode ser mijis. Adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-    laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-    quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
-    ea commodo consequat.
+   Many HTTP/1.1 header field values consist of words separated by LWS
+   or special characters. These special characters MUST be in a quoted
+   string to be used within a parameter value (as defined in section
+   3.6).
 </p>
-<h2 id="sec1">1.2 Subtitulo</h2>
+<dl class="dl-horizontal">
+  <dt>token</dt><dd>= 1*&lt;any CHAR except CTLs or separators&gt;</dd>
+  <dt>separators</dt>
+  <dd>
+      = "(" | ")" | "<" | ">" | "@"<br/>
+        | "," | ";" | ":" | "\" | <"><br/>
+        | "/" | "[" | "]" | "?" | "="<br/>
+        | "{" | "}" | SP | HT
+  </dd>
+</dl>
 <p>
-   Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e 
-   fermentis. Interagi no mé, cursus quis, vehicula ac nisi. Aenean vel dui dui.
-   Nullam leo erat, aliquet quis tempus a, posuere ut mi. Ut scelerisque neque
-   et turpis posuere pulvinar pellentesque nibh ullamcorper.
-   Pharetra in mattis molestie, volutpat elementum justo. Aenean ut ante turpis.
-   Pellentesque laoreet mé vel lectus scelerisque interdum cursus velit auctor.
-   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac mauris
-   lectus, non scelerisque augue. Aenean justo massa.
+    Comments can be included in some HTTP header fields by surrounding
+   the comment text with parentheses. Comments are only allowed in
+   fields containing "comment" as part of their field value definition.
+   In all other fields, parentheses are considered part of the field
+   value.
 </p>
+<dl class="dl-horizontal">
+  <dt>comment</dt><dd>= "(" *( ctext | quoted-pair | comment ) ")"</dd>
+  <dt>ctext</dt>
+  <dd>= &lt;any TEXT excluding "(" and ")"&gt;</dd>
+</dl>
 <p>
-    Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis.
-    Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis.
-    Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é
-    amistosis quis leo. Manduma pindureta quium dia nois paga.
-    Sapien in monti palavris qui num significa nadis i pareci latim.
-    Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.
+    A string of text is parsed as a single word if it is quoted using
+   double-quote marks.
 </p>
-<h2 id="sec2">1.3 Subtitulo</h2>
+<dl class="dl-horizontal">
+  <dt>quoted-string</dt><dd>= ( &lt;"&gt; *(qdtext | quoted-pair ) <"> )</dd>
+  <dt>qdtext</dt>
+  <dd>= &lt;any TEXT except &lt;"&gt;&gt;</dd>
+</dl>
 <p>
-    Cevadis im ampola pa arma uma pindureta. Nam varius eleifend orci, sed
-    viverra nisl condimentum ut. Donec eget justis enim. Atirei o pau no gatis.
-    Viva Forevis aptent taciti sociosqu ad litora torquent per conubia nostra,
-    per inceptos himenaeos. Copo furadis é disculpa de babadis, arcu quam
-    euismod magna, bibendum egestas augue arcu ut est. Delegadis gente finis.
-    In sit amet mattis porris, paradis. Paisis, filhis, espiritis santis.
-    Mé faiz elementum girarzis. Pellentesque viverra accumsan ipsum elementum
-    gravidis.
+    The backslash character ("\") MAY be used as a single-character
+   quoting mechanism only within quoted-string and comment constructs.
 </p>
-<p>
-   Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e 
-   fermentis. Interagi no mé, cursus quis, vehicula ac nisi. Aenean vel dui dui.
-   Nullam leo erat, aliquet quis tempus a, posuere ut mi. Ut scelerisque neque
-   et turpis posuere pulvinar pellentesque nibh ullamcorper.
-   Pharetra in mattis molestie, volutpat elementum justo. Aenean ut ante turpis.
-   Pellentesque laoreet mé vel lectus scelerisque interdum cursus velit auctor.
-   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac mauris
-   lectus, non scelerisque augue. Aenean justo massa.
-</p>
-<p>
-    Casamentiss faiz malandris se pirulitá, Nam liber tempor cum soluta nobis
-    eleifend option congue nihil imperdiet doming id quod mazim placerat facer
-    possim assum. Lorem ipsum dolor sit amet, consectetuer Ispecialista im mé
-    intende tudis nuam golada, vinho, uiski, carirí, rum da jamaikis, só num
-    pode ser mijis. Adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-    laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-    quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
-    ea commodo consequat.
-</p>
-...
+<dl class="dl-horizontal">
+  <dt>quoted-pair</dt><dd> = "\" CHAR</dd>
+</dl>
