--- a/public_html/en/content/method.html
+++ b/public_html/en/content/method.html
@@ -101,7 +101,7 @@
    request MUST NOT include a Max-Forwards field.
 </p>
 <br/>
-<h3 id='sec2'>9.3 GET</h3>
+<h2 id='sec2'>9.3 GET</h2>
 <p>The GET method means retrieve whatever information (in the form of an
    entity) is identified by the Request-URI. If the Request-URI refers
    to a data-producing process, it is the produced data which shall be
@@ -192,7 +192,7 @@
 <p>See section 15.1.3 for security considerations.
 </p>
 <br/>
-<h2 id="sec6">9.5 POST</h2>
+<h2 id="sec6">9.6 PUT</h2>
 <p>The PUT method requests that the enclosed entity be stored under the
    supplied Request-URI. If the Request-URI refers to an already
    existing resource, the enclosed entity SHOULD be considered as a
